<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="myapp_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="firstpage_button_1">SPOTIFY STREAMER</string>
    <string name="firstpage_button_2">SCORES APP</string>
    <string name="firstpage_button_3">LIBRARY APP</string>
    <string name="firstpage_button_4">BUILD IT BIGGER</string>
    <string name="firstpage_button_5">XYZ READER</string>
    <string name="firstpage_button_6">CAPSTONE: MY OWN APP</string>
    <string name="toast_message">This method will launch my %1$s app</string>
</resources>
