<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/myapp_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_body_2_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstpage_button_1"
        android:id="@+id/firstpage_button_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        style="@style/buttonStyle"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstpage_button_2"
        android:id="@+id/firstpage_button_2"
        android:layout_below="@+id/firstpage_button_1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstpage_button_3"
        android:id="@+id/firstpage_button_3"
        android:layout_below="@+id/firstpage_button_2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstpage_button_4"
        android:id="@+id/firstpage_button_4"
        android:layout_below="@+id/firstpage_button_3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstpage_button_5"
        android:id="@+id/firstpage_button_5"
        android:layout_below="@+id/firstpage_button_4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        style="@style/buttonStyle"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstpage_button_6"
        android:id="@+id/firstpage_button_6"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/firstpage_button_5"
        style="@style/buttonStyleRed"
        android:onClick="sendMessage"/>

</RelativeLayout>
